--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
     <title>Title</title>
 </head>
 <body>
-<h1>assad viado</h1>
+<h1>assad viado 100%</h1>
 <p><a href="/hello">Diga Olá</a></p>
 <h2>ola mun</h2>
 <h3> comi quem leu</h3>
