--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,5 +10,12 @@
 <h2>ola mun</h2>
 <h3> comi quem leu</h3>
 <h1> aaaaaaaaaaaaaaaaaa</h1>
+<ul>
+    <li>MINHA LISTA</li>
+    <li>MINHA LISTA</li>
+    <li>MINHA LISTA</li>
+    <li>MINHA LISTA</li>
+    <li>MINHA LISTA</li>
+</ul>
 </body>
 </html>
