Adicionando formulário simples

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,20 +2,24 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projeto felas</title>
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-<h1>assad viado 100%</h1>
-<p><a href="/hello">Diga Olá</a></p>
-<h2>ola mun</h2>
-<h3> comi quem leu</h3>
-<h1> aaaaaaaaaaaaaaaaaa</h1>
-<ul>
-    <li>MINHA LISTA</li>
-    <li>MINHA LISTA</li>
-    <li>MINHA LISTA</li>
-    <li>MINHA LISTA</li>
-    <li>MINHA LISTA</li>
-</ul>
+    <form action="" method="post">
+        <label for="">Nome:</label><input type="text" name="name" id="name">
+        <div>
+            <p>Sexo:</p>
+            <label for="">Masculino:</label><input type="radio" name="masc" id="masc">
+            <label for="">Feminino:</label><input type="radio" name="femal" id="femal">
+        </div>
+        <label for="">Altura:</label><input type="number" name="name" id="name">
+        <label for="">Peso:</label><input type="number" name="name" id="name">
+        <label for="">Idade:</label><input type="range" name="name" id="name">
+
+        <button>Reset</button>
+        <input type="submit" value="Enviar" id="submit">
+    </form>
 </body>
 </html>
