--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,13 +10,13 @@
     <form action="" method="post">
         <label for="">Nome:</label><input type="text" name="name" id="name">
         <div>
-            <p>Sexo:</p>
+            <p>Sexo: </p>
             <label for="">Masculino:</label><input type="radio" name="masc" id="masc">
             <label for="">Feminino:</label><input type="radio" name="femal" id="femal">
         </div>
         <label for="">Altura:</label><input type="number" name="name" id="name">
         <label for="">Peso:</label><input type="number" name="name" id="name">
-        <label for="">Idade:</label><input type="range" name="name" id="name">
+        <label for="">Idade:</label><input type="number" name="age" id="age">
 
         <button>Reset</button>
         <input type="submit" value="Enviar" id="submit">
