--- a/src/main/resources/static/style.css
+++ b/src/main/resources/static/style.css
@@ -1,7 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 *{
     margin: 0;
     padding: 0;
-    box-sizing: 0;
+    box-sizing: border-box;
 }
 
 body{
@@ -10,11 +12,21 @@ body{
     align-items: center;
     width: 100vw;
     height: 100vh;
+    font-family: "Roboto", sans-serif;
 }
 
-h1{
-color: red;
+.container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-flow: column;
+    border: 2px solid black;
+    box-shadow: 2px 2px 4px black;
+    border-radius: 8px;
+}
 
+.container h1{
+    margin-top: 8px;
 }
 
 form{
@@ -22,8 +34,52 @@ form{
     flex-flow: column;
     gap: 10px;
     width: 400px;
+    padding: 12px;
 }
 
-div {
-    display: flex;
+input{
+    padding: 8px;
+}
+
+input[type=number]::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+
+}
+input[type=number] {
+   -moz-appearance: textfield;
+   appearance: textfield;
+
+}
+
+input:focus{
+    background-color: #d4d4d4;
+}
+
+button {
+    border: 2px solid black;
+    color: black;
+    padding: 14px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 5px;
+    transition: 0.5s;
+}
+
+button:hover{
+    background-color: #04AA6D;
+    color: white;
+}
+
+@media (max-width: 402px) {
+    form {
+      width: 300px;
+    }
+
+    input{
+        width: 270px;
+    }
 }
