--- a/src/main/resources/templates/Formulario.html
+++ b/src/main/resources/templates/Formulario.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+<div class="container">
     <h1>Calculadora de IMC</h1>
 
     <form action="RespFormulario" th:object="${CriacaoFormulario}" method="POST">
@@ -14,27 +15,28 @@
 
 
 
-<!--        <div>-->
-<!--            <label for="">Sexo</label>-->
-<!--            <input type="radio" name="masc" id="masc"> Masculino-->
-<!--            <input type="radio" name="femal" id="femal"> Feminino-->
-<!--        </div>-->
+        <!--        <div>-->
+        <!--            <label for="">Sexo</label>-->
+        <!--            <input type="radio" name="masc" id="masc"> Masculino-->
+        <!--            <input type="radio" name="femal" id="femal"> Feminino-->
+        <!--        </div>-->
         <label>Altura:</label>
         <input type="number" step="0.01" th:field="*{altura}" placeholder="Sua altura" /></br>
-<!--        "th:field="*{altura}"  Ela liga esse input ao atributo nome de um objeto Java que foi passado do controlador para a página.-->
+        <!--        "th:field="*{altura}"  Ela liga esse input ao atributo nome de um objeto Java que foi passado do controlador para a página.-->
 
 
         <label>Peso:</label>
-        <input type="text" th:field="*{peso}" step="0.01" ><br>
+        <input type="number" th:field="*{peso}" step="0.01" placeholder="Seu peso" ><br>
 
-<!--        <label>Idade:</label>-->
-<!--        <input type="number" name="age"> <br>-->
+        <!--        <label>Idade:</label>-->
+        <!--        <input type="number" name="age"> <br>-->
 
-<!--        <button>Reset</button>-->
+        <!--        <button>Reset</button>-->
 
-        <button type="submit">Envia</button>
+        <button type="submit">Enviar</button>
 
 
     </form>
+</div>
 </body>
 </html>
